--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,6 @@
 html {
   font-size: 18px;
+  font-family: Helvetica;
 }
 .logoBackground {
   background-color: black;
@@ -29,4 +30,45 @@ html {
 .logoBanner p {
   margin-top: 0.66rem;
   margin-bottom: 0.66rem;
+}
+.mainBanner {
+  display:flex;
+  background-image: url("./images/moto.jpeg");
+  height: 27.32rem;
+  width: auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  justify-content: center;
+}
+.mainBanner .container {
+  width: 960px;
+  margin: 0;
+  height:auto;
+  display:flex;
+  justify-content: flex-start;
+}
+.header {
+  display:flex;
+  flex-direction: column;
+  align-content: center;
+  background-color: black;
+  margin-top: 9rem;
+  margin-bottom: 7rem;
+  width: 20rem;
+  height:auto;
+  color: white;
+}
+.header p {
+  display:flex;
+  margin-top: 2rem;
+  margin-left: 3rem;
+}
+.header h1 {
+  display:flex;
+  margin-top: 0.25rem;
+  margin-bottom: 2rem;
+  margin-left: 3rem;
+  font-size: 2rem;
+  font-weight: bold;
 }
