--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -90,3 +90,40 @@ html {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
 }
+.productGrid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+.productGrid .product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 30%;
+  height: auto;
+}
+.productGrid .product .box {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  border: 4px solid black;
+  width: 100%;
+  height: auto;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+.productGrid .product .box img {
+  height: 9rem;
+  width: auto;
+}
+.productGrid .product p {
+  color: white;
+  background-color: black;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  width: 100%;
+  text-align: center;
+  border: 4px solid black;
+}
