--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -91,34 +91,45 @@ html {
   margin-bottom: 0.75rem;
 }
 .productGrid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display:flex;
+  width: 100%;
+  justify-content: center;
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
-.productGrid .product {
+.productGrid .container {
+  display: flex;
+  justify-content: space-between;
+  width: 960px;
+}
+.productGrid .container .product {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 30%;
   height: auto;
 }
-.productGrid .product .box {
+.productGrid .container .product .box {
+  height: auto;
   border: 4px solid black;
   width: 100%;
-  height: auto;
+  height: 13rem;
   display:flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
 }
-.productGrid .product .box img {
-  height: 9rem;
-  width: auto;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.productGrid .container .product .box img {
+  max-width: 50%;
+  height: auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
-.productGrid .product p {
+#glasses {
+  max-width: 50%;
+  height: auto;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+.productGrid .container .product p {
   color: white;
   background-color: black;
   padding-top: 0.5rem;
@@ -128,20 +139,24 @@ html {
   border: 4px solid black;
 }
 .companyInfo {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  margin-bottom: 4rem;
+  display:flex;
+  width: 100%;
+  justify-content: center;
 }
-.companyInfo .info {
+.companyInfo .container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 4rem;
+  width: 960px;
+}
+.companyInfo .container .info {
   display:flex;
   width: 35%;
   height: auto;
-  display:flex;
   flex-direction: column;
   align-items: center;
 }
-.companyInfo .info .title {
+.companyInfo .container .info .title {
   color: white;
   background-color: black;
   width: 100%;
@@ -150,7 +165,28 @@ html {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.companyInfo .info p {
+.companyInfo .container .info p {
   text-align: left;
   width: 100%;
+}
+.footer {
+  display:flex;
+  width: 100%;
+  justify-content: center;
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 5rem;
+}
+.footer .container {
+  display:flex;
+  flex-direction: column;
+  align-items: left;
+  text-align: left;
+  width: 960px;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+@media only screen and(max-width: 1024px) {
+  
 }
